--- a/src/_header.scss
+++ b/src/_header.scss
@@ -40,7 +40,7 @@ header {
             :last-child {
                 @include padding($sm-space);
                 border: 1px solid currentColor;
-                border-radius: 9px;
+                border-radius: $border-radius;
 
 
             }
@@ -63,9 +63,9 @@ header {
             to bottom, 
             rgba(0, 0, 0, 0.35) 0%,  
             rgba(0, 0, 0, 0.1) 100%),
-        url(/src/lib/assets/BibDem_Titelbild_no-text.png) no-repeat center center scroll;
+        url(/BibDem_Titelbild_no-text.png) no-repeat center center scroll;
 
-        h1, h2 {
+        h1, h2, h3   {
             color: white;
             @include padding($reg-space);
         }
