--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -51,11 +51,13 @@ h1 {
 
 h2 {
   @include font-size($font-size-lg);
-  font-weight: 300;
+  // font-weight: 300;
 }
 
 h3 {
-  @include font-size($font-size-basis);
+  @include font-size($font-size-lg);
+  font-weight: 300;
+
 }
 
 /*-----Paddings & Gap-----*/
@@ -65,4 +67,9 @@ $sm-space: calc($reg-space / 2);
 $xs-space: calc($sm-space / 2);
 $xxs-space: calc($xs-space / 2);
 $lg-space: calc($reg-space * 2);
+$xl-space: calc($reg-space * 4);
+
+
 $padding-btn: $sm-space $reg-space;
+
+$border-radius: 9px;
