--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ h1 {
 
 h2 {
   font-size: calc(1.275rem + 0.3vw);
-  font-weight: 300;
 }
 @media (min-width: 1200px) {
   h2 {
@@ -37,7 +36,13 @@ h2 {
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: calc(1.275rem + 0.3vw);
+  font-weight: 300;
+}
+@media (min-width: 1200px) {
+  h3 {
+    font-size: 1.5rem;
+  }
 }
 
 /*-----Paddings & Gap-----*/
@@ -79,28 +84,32 @@ img {
 }
 
 .body {
-  margin: calc(1.525rem + 3.3vw);
+  padding: calc(1.525rem + 3.3vw);
+  max-width: 1400px;
+  margin: 0 auto;
 }
 @media (min-width: 1200px) {
   .body {
-    margin: 4rem;
+    padding: 4rem;
   }
 }
 .body h1 {
-  margin-top: calc(1.525rem + 3.3vw);
+  margin-top: calc(1.925rem + 8.1vw);
 }
 @media (min-width: 1200px) {
   .body h1 {
-    margin-top: 4rem;
+    margin-top: 8rem;
   }
 }
 .body h1,
-.body h2 {
+.body h2,
+.body h3 {
   margin-bottom: calc(1.325rem + 0.9vw);
 }
 @media (min-width: 1200px) {
   .body h1,
-  .body h2 {
+  .body h2,
+  .body h3 {
     margin-bottom: 2rem;
   }
 }
@@ -114,12 +123,6 @@ img {
   }
 }
 
-.img-carousel--2 {
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-}
-
 .förderung p {
   padding-bottom: calc(1.325rem + 0.9vw);
 }
@@ -131,6 +134,55 @@ img {
 .förderung img {
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.img-carousel--2 {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.grid-einheiten {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  margin-bottom: calc(1.525rem + 3.3vw);
+}
+@media (min-width: 1200px) {
+  .grid-einheiten {
+    margin-bottom: 4rem;
+  }
+}
+.grid-einheiten img {
+  border-radius: 9px;
+}
+.grid-einheiten div:last-child {
+  align-self: center;
+}
+@media (min-width: 768px) {
+  .grid-einheiten {
+    grid-template-columns: 1fr 1fr;
+  }
+  .grid-einheiten:nth-child(even) > :first-child {
+    order: 2;
+  }
+  .grid-einheiten:nth-child(even) > :last-child {
+    order: 1;
+  }
+}
+
+.modal {
+  align-self: center;
+  margin: 0 auto;
+  border-radius: 9px;
+  padding: calc(1.325rem + 0.9vw);
+  border: lightgray 1px solid;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+@media (min-width: 1200px) {
+  .modal {
+    padding: 2rem;
+  }
 }
 
 button {
@@ -200,14 +252,14 @@ header nav .nav-btns :last-child {
   height: 100vh;
   overflow: hidden;
   background-size: cover !important;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0.1) 100%), url(/src/lib/assets/BibDem_Titelbild_no-text.png) no-repeat center center scroll;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0.1) 100%), url(/BibDem_Titelbild_no-text.png) no-repeat center center scroll;
 }
-.hero h1, .hero h2 {
+.hero h1, .hero h2, .hero h3 {
   color: white;
   padding: calc(1.325rem + 0.9vw);
 }
 @media (min-width: 1200px) {
-  .hero h1, .hero h2 {
+  .hero h1, .hero h2, .hero h3 {
     padding: 2rem;
   }
 }/*# sourceMappingURL=index.css.map */
